--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
             {% for item in items %}
                 <div>
                     <a href="{% url "item:detail" item.id %}">
-                        <div>
-                            <img src="{{ item.image.url }}" class="rounded-t-xl">
+                        <div class="w-full h-64 overflow-hidden rounded-t-xl">
+                            <img src="{{ item.image.url }}" class="object-cover w-full h-full" alt="{{ item.name }}">
                         </div>
                         <div class="p-6 bg-white rounded-b-xl">
                             <h2 class="text-2xl">{{ item.name }}</h2>
@@ -26,12 +26,12 @@
     <div class="mt-6 px-6 py-12 bg-gray-100 rounded-xl">
         <h2 class="mb-12 text-2xl text-center">Categories</h2>
         
-        <div class="grid grid-cols-3 gap-3">
+        <div class="grid grid-cols-6 gap-2">
             {% for cat in categories %}
                 <div>
                     <a href="#">
-                        <div class="p-6 bg-white rounded-b-xl">
-                            <h2 class="text-2xl">{{ item.name }}</h2>
+                        <div class="p-6 bg-white rounded-xl">
+                            <h2 class="text-2xl">{{ cat.name }}</h2>
                             <p class="text-gray-500">{{ cat.items.count }} items</p>
                         </div>
                     </a>
