--- a/templates/item/detail.html
+++ b/templates/item/detail.html
@@ -4,8 +4,10 @@
 
 {% block content %}
     <div class="grid grid-cols-5 gap-6">
-        <div class="col-span-3 ">
-            <img src="{{ item.image.url }}" class="rounded-xl">
+        <div class="col-span-3">
+            <div class="w-full h-full overflow-hidden rounded-xl">
+                <img src="{{ item.image.url }}" class="object-cover w-full h-full" alt="{{ item.name }}">
+            </div>
         </div>
 
         <div class="col-span-2 p-6 bg-gray-100 rounded-xl">
