Added item edit and delete

--- a/templates/item/form.html
+++ b/templates/item/form.html
@@ -33,6 +33,6 @@
 
 
 
-        <button class="py-4 px-8 my-4 text-lg bg-teal-500 rounded-xl text-white hover:bg-teal-700">Add</button>
+        <button class="py-4 px-8 my-4 text-lg bg-teal-500 rounded-xl text-white hover:bg-teal-700">Save</button>
     </form>
 {% endblock content %}
