--- a/templates/index.html
+++ b/templates/index.html
@@ -3,40 +3,43 @@
 {% block title %}Welcome{% endblock title %}
 
 {% block content %}
-    <div class="mt-6 px-6 py-12 bg-gray-100 rounded-xl">
-        <h2 class="mb-12 text-2xl text-center">Newest Items</h2>
+    <div class="mt-6 px-6 py-6 bg-gray-100 rounded-xl">
+        <h2 class="mb-6 text-2xl text-center font-semibold">Newest Items</h2>
 
-        <div class="grid grid-cols-3 gap-3">
-            {% for item in items %}
-                <div>
-                    <a href="{% url "item:detail" item.id %}">
-                        <div class="w-full h-64 overflow-hidden rounded-t-xl">
-                            <img src="{{ item.image.url }}" class="object-cover w-full h-full" alt="{{ item.name }}">
-                        </div>
-                        <div class="p-6 bg-white rounded-b-xl">
-                            <h2 class="text-2xl">{{ item.name }}</h2>
-                            <p class="text-gray-500">Price: ${{ item.price }}</p>
-                        </div>
-                    </a>
-                </div>
-            {% endfor %}
+        <div class="grid grid-cols-4 gap-2">
+                {% for item in items %}
+                    <div>
+                        <a href="{% url "item:detail" item.id %}">
+                            <div class="w-full h-48 overflow-hidden rounded-t-xl">
+                                <img src="{{ item.image.url }}" class="object-fill w-full h-full" alt="{{ item.name }}">
+                            </div>
+                            <div class="flex flex-col justify-between p-4 bg-white rounded-b-xl">
+                                <h2 class="text-2xl">{{ item.name }}</h2>
+                                <p class="text-gray-500">Price: ${{ item.price }}</p>
+                            </div>
+                        </a>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+
+        <div class="mt-6 px-6 py-6 bg-gray-100 rounded-xl">
+            <h2 class="mb-6 text-2xl text-center font-semibold">Categories</h2>
+            
+            <div class="grid grid-cols-6 gap-2">
+                {% for cat in categories %}
+                    <div>
+                        <a href="{% url "item:browse" %}?category={{ cat.id }}">
+                            <div class="p-6 bg-white rounded-xl">
+                                <h2 class="text-2xl">{{ cat.name }}</h2>
+                                <p class="text-gray-500">{{ cat.items.count }} items</p>
+                            </div>
+                        </a>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
     </div>
 
-    <div class="mt-6 px-6 py-12 bg-gray-100 rounded-xl">
-        <h2 class="mb-12 text-2xl text-center">Categories</h2>
-        
-        <div class="grid grid-cols-6 gap-2">
-            {% for cat in categories %}
-                <div>
-                    <a href="#">
-                        <div class="p-6 bg-white rounded-xl">
-                            <h2 class="text-2xl">{{ cat.name }}</h2>
-                            <p class="text-gray-500">{{ cat.items.count }} items</p>
-                        </div>
-                    </a>
-                </div>
-            {% endfor %}
-        </div>
-    </div>
+    
 {% endblock content %}
