--- a/templates/item/detail.html
+++ b/templates/item/detail.html
@@ -38,10 +38,10 @@
         </div>
     </div>
 
-    <div class="mt-6 px-6 py-12 bg-gray-100 rounded-xl">
-        <h2 class="mb-12 text-2xl text-center">Related Items</h2>
+    <div class="mt-6 px-6 py-6 bg-gray-100 rounded-xl">
+        <h2 class="mb-6 text-2xl text-center font-semibold">Related Items</h2>
 
-        <div class="grid grid-cols-3 gap-3">
+        <div class="grid grid-cols-6 gap-2">
             {% for item in related_items %}
                 <div>
                     <a href="{% url "item:detail" item.id %}">
