--- a/templates/chat/new.html
+++ b/templates/chat/new.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}{{ title }}{% endblock title %}
+{% block title %}New Chat{% endblock title %}
 
 {% block content %}
-    <h1 class="mb-6 text-3xl">{{ title }}</h1>
-    <form method="post" action="." enctype="multipart/form-data">
+    <h1 class="mb-6 text-3xl">New chat</h1>
+
+    <form method="post" action=".">
         {% csrf_token %}
 
         {% if form.errors or form.non_field_errors %}
@@ -31,6 +32,6 @@
             {{ form.as_p }}
         </div>
 
-        <button class="py-4 px-8 my-4 text-lg bg-teal-500 rounded-xl text-white hover:bg-teal-700">Save</button>
+        <button class="py-4 px-8 my-4 text-lg bg-teal-500 rounded-xl text-white hover:bg-teal-700">Send</button>
     </form>
 {% endblock content %}
