--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -3,8 +3,8 @@
 {% block title %}Dashboard{% endblock title %}
 
 {% block content %}
-    <div class="mt-6 px-6 py-12 bg-gray-100 rounded-xl">
-        <h2 class="mb-12 text-2xl text-center">My Items</h2>
+    <div class="mt-6 px-6 py-6 bg-gray-100 rounded-xl">
+        <h2 class="mb-6 text-2xl text-center font-semibold">My Items</h2>
 
         <div class="grid grid-cols-4 gap-2">
             {% for item in items %}
